karnc/tests/fixtures/negative/161_type_param_bound/input.karn
commons bad

fn sort_of[A: Ord](x: A) -> A {
  x
}
